--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -15,7 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@project/shared-types": ["shared-types/src/index.ts"]
+      "@project/shared/core": ["shared/core/src/index.ts"],
+      "@project/shared/helpers": ["shared/helpers/src/index.ts"],
+      "@project/shared/types": ["shared/types/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
