--- a/project/apps/blog/project.json
+++ b/project/apps/blog/project.json
@@ -27,7 +27,8 @@
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "blog:build"
+        "buildTarget": "blog:build",
+        "port": 3001
       },
       "configurations": {
         "development": {
