--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -15,6 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@project/constants": ["constants/src/index.ts"],
+      "@project/shared/constants": ["shared/constants/src/index.ts"],
       "@project/shared/core": ["shared/core/src/index.ts"],
       "@project/shared/helpers": ["shared/helpers/src/index.ts"],
       "@project/shared/types": ["shared/types/src/index.ts"]
