--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -9,13 +9,14 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2015",
-    "module": "esnext",
+    "module": "commonjs",
     "lib": ["es2020", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "@project/constants": ["constants/src/index.ts"],
+      "@project/shared/config/blog": ["shared/config/blog/src/index.ts"],
       "@project/shared/config/users": ["shared/config/users/src/index.ts"],
       "@project/shared/constants": ["shared/constants/src/index.ts"],
       "@project/shared/core": ["shared/core/src/index.ts"],
